--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        trillo
+        <div class="container">
+          <header class="header">header</header>
+          <div class="content">
+            <nav class="sidebar">
+              Navigation
+            </nav>
+            <main class="hotel-view">
+              Hotels
+            </main>
+          </div>
+        </div>
     </body>
 </html>
