add gallery to hotel overview

--- a/index.html
+++ b/index.html
@@ -96,7 +96,17 @@
 
 
             <main class="hotel-view">
-              Hotels
+              <div class="gallery">
+                <figure class="gallery__item">
+                  <img src="img/hotel-1.jpg" alt="hotel 1 photo" class="gallery__photo">
+                </figure>
+                <figure class="gallery__item">
+                  <img src="img/hotel-2.jpg" alt="hotel 2 photo" class="gallery__photo">
+                </figure>
+                <figure class="gallery__item">
+                  <img src="img/hotel-3.jpg" alt="hotel 3 photo" class="gallery__photo">
+                </figure>
+              </div>
             </main>
           </div>
         </div>
